--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<!--
+ * @Author: linliangwei 943607147@qq.com
+ * @Date: 2023-05-20 13:49:56
+ * @LastEditors: linliangwei 943607147@qq.com
+ * @LastEditTime: 2023-05-22 09:30:23
+ * @FilePath: \Base_APP_PC\index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     </head>
     <body>
