--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  * @LastEditors: linliangwei 943607147@qq.com
  * @LastEditTime: 2023-05-22 09:30:23
  * @FilePath: \Base_APP_PC\index.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ * @Description: 注释
 -->
 <!DOCTYPE html>
 <html lang="en">
